# clap-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md  justfile
.devcontainer/: .dockerignore  Dockerfile
.github/actions/setup_cache/: action.yml
.github/workflows/: CI.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake  mtgoparserConfig.cmake.in
configured_files/: config.hpp.in
include/clap_cpp/: clap.hpp
include/clap_cpp/clap/: command.hpp  parser.hpp
src/example/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
